Use Apache HttpClient to download sample laz file